cambios para foto perfil

--- a/WebApplicationApiCercleCultural/WebApplicationApiCercleCultural.csproj
+++ b/WebApplicationApiCercleCultural/WebApplicationApiCercleCultural.csproj
@@ -201,6 +201,7 @@
       <DependentUpon>ModelCCApi.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ImageService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
@@ -287,6 +288,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="imagenes\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
